[build-system]
requires = ["setuptools >= 61.0"]
build-backend = "setuptools.build_meta"


[project]
name = "loop"
description = "Replace common looping boilerplate with pretty method chaining."
authors = [{name = "Artium Dashuta", email = "artium89@gmail.com"}]
version = "1.0.0"
readme = "README.md"
dependencies = ["tqdm"]
requires-python = ">=3.8"
license = {text = "MIT License"}
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]


[project.optional-dependencies]
tests = ["pytest==7.4.4"]
docs = ["mkdocs==1.5.3", "mkdocs-material==9.5.7"]


[project.urls]
Repository = "https://github.com/artiumd/loop"
